--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -10,6 +10,7 @@
     },
     "files.associations": {
         "string": "cpp",
-        "array": "cpp"
+        "array": "cpp",
+        "xstring": "cpp"
     }
 }
